updated next steps

--- a/app/views/camp_applications/next_steps.html.haml
+++ b/app/views/camp_applications/next_steps.html.haml
@@ -2,7 +2,7 @@
 	.col-md-8.mx-auto
 		- unless current_user&.confirmed_at.nil?
 			- if @application.status == "Ready to Submit"
-				%p The Retreat Team will meet in February/ March to discuss all the applicants. Please understand we will have a max of 20 DeafBlind participants, but it may be less depending on the COVID-19 restrictions that are set by the state. If you have not been accepted, you will be put on the waiting list for the next retreat. 
+				%p The Retreat Team will meet in May to discuss all the applicants. Please understand we will have a maximun of 30 DeafBlind participants, but it may be less depending on the COVID-19 restrictions that are set by the state. If you have not been accepted, you will be put on the waiting list for the next retreat. 
 
 				%p Upon approval, we will: 
 
