--- a/app/views/camp_applications/show.html.haml
+++ b/app/views/camp_applications/show.html.haml
@@ -1,6 +1,83 @@
 .container.mt-4
 	.col-md-8.mx-auto
 		%h1 Camp Application
-		%p Hi #{@application.camp_application_pi.first_name}.
+		- if current_user.id == @application.user.id
+			%p Hi #{@application.camp_application_pi.first_name}.
 
-		%p Our records show that you have submitted an application, and we are in the process of reviewing it.  Stay tuned.
+			%p Our records show that you have submitted an application, and we are in the process of reviewing it.  Stay tuned.
+
+		- if current_user&.admin?
+			%h2 Basic Information
+			%p
+				%strong User Name:
+				= @user_name
+			%p 
+				%strong User Email:
+				= @user_email
+			- if @confirmed.present?
+				%p 
+					%strong Confirmed Email:
+					= @confirmed
+			%p 
+				%strong Application Status:
+				= @status
+
+			.row.mb-4
+				.col-6.border.border-dark.p-4
+					%h2 Communication and Code of Conduct
+					- if @c3.agree?
+						.d-grid.d-block.text-center.p-4{style: "background: green; color: white;"}
+							AGREED
+				.col-6.border.border-dark.p-4
+					%h2 Permissions
+					- if @permission.agree?
+						.d-grid.d-block.text-center.p-4{style: "background: green; color: white;"}
+							AGREED
+			
+			-#-----------
+			%h COVID-19
+			- if @covid.vaccinated?
+				.d-grid.d-block.text-center.p-4{style: "background: green; color: white;"}
+					VACCINATED
+				.row.mb-4
+					.col-3.border.border-dark.p-4
+						%ul
+							- @covid.vaccination_type.each do |type|
+								%li #{type}
+					.col-3.border.border-dark.p-4.text-center
+						%strong First Shot</br>
+						= @covid.first_shot.strftime("%B %e, %Y")
+					.col-3.border.border-dark.p-4.text-center
+						%strong Second Shot</br>
+						= @covid.second_shot.strftime("%B %e, %Y")
+					.col-3.border.border-dark.p-4.text-center
+						%strong Booster Shot</br>
+						= @covid.booster_shot.strftime("%B %e, %Y")
+
+			-#----------------
+			%h2 Personal Information
+			%p 
+				%strong Applicant Name:
+				= @pi.first_name + " " + @pi.last_name
+			%p 
+				%strong Gender Identity:
+				= @pi.gender.join(" ")
+			%p 
+				%strong Pronouns:
+				= @pi.pronouns.join(" ")
+			%p
+				%strong Date of Birth:
+				= @pi.dob.strftime("%B %e, %Y")
+			%p
+				%strong Age on August 15, 2022:
+				= @aug_15
+			%h3.mt-4 Primary Address
+			- if @pi.address.present?
+				%address
+					= @pi.address.address_l1
+					= @pi.address.address_l2
+
+				
+			
+			
+			
