--- a/app/views/camp_applications/show.html.haml
+++ b/app/views/camp_applications/show.html.haml
@@ -77,7 +77,7 @@
 					#{@pi.address.address_l1} <br>
 					#{@pi.address.address_l2} <br>
 					#{@pi.address.city}, #{@pi.address.state_province.code} #{@pi.address.zippostal} <br>
-					#{@pi.address.county.name}, #{@pi.address.country.name}
+					#{@pi.address.county.name}, #{@pi.address.state_province.country.name}
 
 
 				
