added CEUs to application show

--- a/app/views/camp_applications/show.html.haml
+++ b/app/views/camp_applications/show.html.haml
@@ -159,6 +159,16 @@
 						%ul
 							%li #{name.first_name} #{name.last_name}, #{name.name_type}
 
+			- if @type.kind == "Volunteer"
+				%h2 For Volunteers Only
+				- if @ceu.nil?
+					%p This user did not fill out a CEU form
+				- else
+					%h3 Continuing Education Units
+					- unless @ceu.certifications.nil?
+						%h4 Certifications
+						%p #{@ceu.certifications.count}
+						
 			
 
 
