--- a/app/views/camp_applications/show.html.haml
+++ b/app/views/camp_applications/show.html.haml
@@ -96,6 +96,11 @@
 						#{@pi.address.county.name}, #{@pi.address.state_province.country.name}
 
 				%h3 Primary Phone
+				- unless @pi.phone_numbers.nil?
+					- @pi.phone_numbers.each do |phone|
+						- if phone.phone_type == "Primary Phone"
+							%p #{phone.phone_number + " (" + phone.service_type.join(", ") + ")"}
+
 
 			-#-----Background Info
 			- if @bi.nil?
@@ -224,6 +229,7 @@
 				%p The user did not complete a Lodging form
 			- else
 				%h2 Lodging
+
 				
 
 			
