--- a/app/views/camps/show.html.haml
+++ b/app/views/camps/show.html.haml
@@ -18,6 +18,8 @@
 				.col-md-4.d-grid.d-block
 					= link_to "Applications", camp_camp_applications_path(@camp, filter: "all"), class: "btn btn-secondary btn-lg"
 				.col-md-4.d-grid.d-block
+					= link_to "Contact Info Report", camp_contact_info_report_path(@camp), class: "btn btn-secondary btn-lg"
+				.col-md-4.d-grid.d-block
 					= button_to "Delete", camp_path(@camp), form: { data: { turbo:false }}, method: :delete, class: "btn btn-danger btn-lg"
 
 		
