--- a/app/views/camp_applications/meal_summary_report.html.haml
+++ b/app/views/camp_applications/meal_summary_report.html.haml
@@ -12,7 +12,7 @@
 
 			%h2 #{lifestyle.first.titleize.pluralize} (#{app_by_dietary.count})
 			%div.table-responsive
-				%table.table
+				%table.table.border.border-dark
 					%thead
 						%tr.table-dark
 							%th.text-center{scope: "col"} Name
