adjusted column width on summary

--- a/app/views/camp_applications/meal_summary_report.html.haml
+++ b/app/views/camp_applications/meal_summary_report.html.haml
@@ -15,8 +15,8 @@
 				%table.table.border.border-dark
 					%thead
 						%tr.table-dark
-							%th.text-center{scope: "col"} Name
-							%th.text-center{scope: "col"} Allergens
+							%th.text-center{scope: "col", style: "wideth: 25%"} Name
+							%th.text-center{scope: "col", style: "wideth: 25%} Allergens
 							%th.text-center{scope: "col"} Restrictions
 					%tbody
 						- app_by_dietary.each do |a|
