updated application index

--- a/app/views/camp_applications/index.html.haml
+++ b/app/views/camp_applications/index.html.haml
@@ -39,6 +39,10 @@
 					%p 
 						%strong Status:
 						= app.status
+				- unless app.camp_application_inc.nil?
+					%p
+						%strong Self Identification:
+						= app.camp_application_inc.identity.join(", ")
 				.d-grid.d-block
 					= link_to "View Application", camp_camp_application_path(@camp, app), class: "btn btn-primary btn-lg"
 				
