--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -4,9 +4,6 @@
 
 		%p Please fill out the form below and we will get back to you as soon as possible.  Thank you in advance.
 
-		- content_for :recaptcha_js do
-			= include_recaptcha_js
-
 		= form_with(url: contact_path, model: @contact) do |f|
 			.row
 				.col-md-6
@@ -33,9 +30,9 @@
 				
 			= f.hidden_field :nickname
 
-			
+			= recaptcha_v3(action: 'contact')
 
 			.row
 				= f.submit "Send Message", class: "btn btn-primary"
 
-			= recaptcha_execute('contact')
+			
