updated button size on contact

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -33,6 +33,6 @@
 			= recaptcha_v3(action: 'contact', noscript: "false")
 
 			.row
-				= f.submit "Send Message", class: "btn btn-primary"
+				= f.submit "Send Message", class: "btn btn-primary btn-lg"
 
 			
