--- a/app/views/layouts/store_management.html.haml
+++ b/app/views/layouts/store_management.html.haml
@@ -7,7 +7,7 @@
 		= csrf_meta_tags
 		= csp_meta_tag
 		= stylesheet_link_tag "application", "data-turbo-track": "reload"
-		= javascript_include_tag "application", "data-turbo-track": "reload", defer: true
+		= javascript_include_tag "application", data:{turbo:{track: "reload"}}, defer: true
     
 	%body.d-flex.flex-column.min-vh-100
 		%turbo-frame{id: "main_frame", data:{turbo:{action: "advance"}}}
